# cryptopal-rust

./: Cargo.toml  Makefile.toml  README.md  index.html  main
solutions/: Cargo.toml  render.sh  report.rmd
solutions/set1/: README.md  readme.rmd  s1c1.rs  s1c2.rs  s1c3.rs  s1c4.rs  s1c5.rs  s1c6.rs
src/: main.rs  sandbox.rs
src/rawmem/: lib.rs  mod.rs
tests/: rawmem-tests.rs
