[package]
name = "cryptopal"
version = "0.1.0"
authors = ["Stanislaw Hüll <Stanislaw.Huell@js-soft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbc = "0.3.3"

[lib]
name = "rawmem"
path = "src/rawmem/lib.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox.rs"

[[bin]]
name = "s1c1"
path = "solutions/set1/s1c1.rs"

[[bin]]
name ="s1c2"
path = "solutions/set1/s1c2.rs"

[[bin]]
name ="s1c3"
path = "solutions/set1/s1c3.rs"

[[bin]]
name ="s1c4"
path = "solutions/set1/s1c4.rs"

[[bin]]
name ="s1c5"
path = "solutions/set1/s1c5.rs"

[[bin]]
name ="s1c6"
path = "solutions/set1/s1c6.rs"
